--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 	height: 640px;
 	margin: 0 auto;
 	outline: 1px solid black;
+	background-color: white;
 
 }
 
@@ -27,7 +28,12 @@ button {
 	background-color: lightblue;
 	border: 2px solid black;
 	display: block;
-	margin: 15px auto;
+	margin: 50px auto 45px auto;
 	padding: 3px;
 	
+}
+
+body {
+	background-color: beige;
+
 }
